<resources>
    <string name="app_name">RegisterProject</string>

    <string name="signup_nickname">닉네임 (한/영 상관없이 6자 이하)</string>
    <string name="signup_id">아이디 (영문 또는 숫자 12자 이하)</string>
    <string name="signup_password">비밀번호 (8자리 이상)</string>
    <string name="signup_password_check">비밀번호 확인</string>
    <string name="signup_email">이메일</string>
    <string name="signup_agree_all">[필수] 만 14세 이상이며 모두 동의 합니다.</string>
    <string name="signup_terms">이용약관</string>
    <string name="signup_read_all"><u>전체보기</u></string>
    <string name="signup_personal_info_term">개인정보 수집 및 이용 동의</string>

    <string name="common_sign_in">로그인</string>
    <string name="common_sign_up">회원가입</string>
    <string name="common_id">아이디</string>
    <string name="common_password">비밀번호</string>
    <string name="common_name">이름</string>

    <string name="common_input">입력</string>
    <string name="common_complete">완료</string>
    <string name="common_cancel">취소</string>
    <string name="common_delete">삭제</string>
    <string name="common_end">종료</string>
</resources>