<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.register.signup.SignupFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="15dp">

            <TextView
                android:id="@+id/tv_signup_title"
                style="@style/common_text_32_bold_dark_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="SIGN IN" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/signup_id"
                android:textColorHint="@color/dark_gray"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/main_blue"
                app:boxStrokeErrorColor="@color/error"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="@color/main_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_signup_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_nickname"
                android:textColorHint="@color/dark_gray"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/main_blue"
                app:boxStrokeErrorColor="@color/error"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="@color/main_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_signup_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/signup_password"
                android:textColorHint="@color/dark_gray"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/main_blue"
                app:boxStrokeErrorColor="@color/error"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="@color/main_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/signup_password_check"
                android:textColorHint="@color/dark_gray"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/main_blue"
                app:boxStrokeErrorColor="@color/error"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="@color/main_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_signup_password_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/signup_button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <com.skydoves.elasticviews.ElasticButton
                    android:id="@+id/btn_signup_cancel"
                    style="@style/common_text_16_dark_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_gray_white"
                    android:padding="4dp"
                    android:text="@string/common_cancel"
                    app:button_duration="100" />


                <com.skydoves.elasticviews.ElasticButton
                    android:id="@+id/btn_signup_check"
                    style="@style/common_text_16_bold_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_main_blue"
                    android:padding="4dp"
                    android:text="@string/common_complete"
                    app:button_duration="100" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</FrameLayout>